--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Concert+One&family=Indie+Flower&family=Lexend:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Parkinsans:wght@300..800&family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -53,22 +55,23 @@
 #top-container {
     padding: 110px;
     background-color: #f7f9fc;
-    border-bottom: 4px solid #dde0f4;
     margin-bottom: 30px;
-    background-image: url(../);
-    background-position: 0 100px;
-    background-size: cover;
+    background-color: #212529;
+    border-bottom: 4px solid #CCC;
     color: #fff;
 }
 
 #main-title {
     padding: 30px 0px;
     font-size: 3rem;
+    margin-top: 7px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 #main-subtitle {
-    font-size: 1rem;
-    padding: 80px;
+    font-size: 1.40rem;
+    padding: 40px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -237,5 +240,59 @@
     background-color: #fff;
     color: #F03E3E;
     border-color: #F03E3E;
+}
+
+
+
+
+/* -------------------- *\
+    #JOBVIEW-PAGE
+\* -------------------- */
+
+
+#job-view-container {
+    margin-top: 100px;
+}
+
+#job-view-container h1 {
+    margin-bottom: 30px;
+}
+
+#img-container {
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+#img-container img {
+    width: 100px;
+    border-radius: 50%;
+    border: 1px solid #212529;
+}
+
+.job-desc {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.main-color {
+    color: #f03e3e;
+}
+
+.back-link {
+    border: 1px solid #f03e3e;
+    padding: 5px 10px;
+    transition: .5s;
+    width: 100px;
+}
+
+.back-link:hover {
+    background-color: #F03E3E;
+    color: white;
+    text-decoration: none;
 }
 
