--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -2,14 +2,14 @@
     <div class="row text-center">
         <a  class="back-link main-color" href="/">Voltar</a>
         <div id="img-container" class="col-md-12">
-            <img src="/img/company.svg" alt="Company">
+            <img src="/images/—Pngtree—building icon isolated on abstract_5091010.png" alt="Company">
         </div>
         <div class="col-md-12">
             <h1 class="main-color">{{job.dataValues.title}}</h1>
             <p class="bold">Quem eles estão buscando:</p>
             <p class="job-desc">{{job.dataValues.description}}</p>
             <p><span class="bold">O sálario informado é de:</span> R${{job.dataValues.salary}}</p>
-            <p>Para trabalhar na <span class="bold main-color">{{job.dataValues.company}}</span> envie um e-mail para a <a href="mail:to{{job.dataValues.email}}"></a>{{job.dataValues.email}}</p>
+            <p>Para trabalhar na <span class="bold main-color">{{job.dataValues.company}}</span> envie um e-mail para a <a class="main-color" href="mail:to{{job.dataValues.email}}"></a>{{job.dataValues.email}}</p>
         </div>
     </div>
 </div>
