projeto finalizado, falta apenas readme agora

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
                 <ul id="job-list" class="list-group">
                     {{#each jobs}}
                         <li class="list-group-item {{#if dataValues.new_job }}new-job{{/if}}">
-                                <img src="/images/—Pngtree—building icon isolated on abstract_5091010.png" alt="Company">
+                                <img src="/images/fotoempresa.png" alt="Company">
                                 <p>{{dataValues.company}}</p>
                                 <h2>{{dataValues.title}}</h2>
                                 <p>R$ {{dataValues.salary}}</p>
