--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -296,3 +296,74 @@
     text-decoration: none;
 }
 
+
+
+
+/* -------------------- *\
+    #RESPONSIVE
+\* -------------------- */
+
+
+@media(max-width: 481px) {
+
+    #navbarNav {
+        text-align: center;
+    }
+
+    #top-container {
+        padding: 20px;
+        padding-top: 100px;
+    }
+
+    #search-form {
+        padding: 0;
+        margin-left: 20px;
+    }
+    
+    #jobs-container {
+        padding: 20px;
+    }
+
+    .list-group-item {
+        padding: 15px 85px;
+    }
+
+    .list-group-item h2 {
+        font-size: 1rem;
+    }
+
+    .list-group-item img {
+        width: 50px;
+        left: 15px;
+        top: calc(50% - 25px);
+    }
+
+    .new-job .new-job-label {
+        display: none;
+    }
+
+    .back-link {
+        margin-left: 30px;
+    }
+
+    #job-view-container {
+        font-size: 1.15rem;
+    }
+
+    #job-desc {
+        width: 80%;
+    }
+
+    #form-box {
+        padding: 25px;
+    }
+
+    #form-box h2 {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    #form-box button {
+        width: 100%;
+    }
+}
