--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -2,7 +2,7 @@
     <div class="row text-center">
         <a  class="back-link main-color" href="/">Voltar</a>
         <div id="img-container" class="col-md-12">
-            <img src="/images/—Pngtree—building icon isolated on abstract_5091010.png" alt="Company">
+            <img src="/images/fotoempresa.png" alt="Company">
         </div>
         <div class="col-md-12">
             <h1 class="main-color">{{job.dataValues.title}}</h1>
